# hackwarsaw2024

./: .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  docker-compose.yml  pyproject.toml  sql_app.db
client/LocalHub/: README.md  package-lock.json  package.json
client/LocalHub/src/: App.vue
client/LocalHub/src/composable/: getBills.js  getPath.js  getVoters.js
client/LocalHub/src/router/: index.js
client/LocalHub/src/views/: BillAddView.vue  BillsView.vue  VoterCreateView.vue  VotersView.vue
localhub/: admin.py  main.py
src/localhub/: admin.py  main.py  models.py  sql.py  voter.py
static/: head.html
typings/localhub/localhub/: admin.pyi  main.pyi  models.pyi  sql.pyi  voter.pyi
