[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localhub"
version = "0.0.1"
dependencies = [
  "httpx",
  "fastapi",
  "psycopg2-binary",
  "sqlalchemy"
]
requires-python = ">=3.10"
authors = [
]
maintainers = [
]

description = "Lorem ipsum"
readme = "README.md"
keywords = []
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
#gui = ["PyQt5"]
#cli = [
#  "rich",
#  "click",
#]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/1stDimension/hackwarsaw2024"
#"Bug Tracker" = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
lh = "hackwarsaw2024:main"

#[project.gui-scripts]
#spam-gui = "spam:main_gui"

#[project.entry-points."spam.magical"]
#tomatoes = "spam:main_tomatoes"
